mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Adding changes before rebasing conflict
+-->
 <head>
 	<title>Brand New Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
