fb adding some troubles to simple.html

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- J'ai changé davis sur le texte  
 -->
 <head>
-	<title>Title</title>
+	<title>Troublesome Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
