mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- Adding changes before rebasing conflict
+<!-- J'ai changé davis sur le texte  
 -->
 <head>
-	<title>Brand New Title</title>
+	<title>Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,7 +16,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Some text to describe the company 
+			Here is the truth ! 
 		</p>
 	</main>
 	<footer class="container">
