fb : Adding some stuff to simple.html

--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; git training</p>
+		<p>&copy; git training ultimate !</p>
 	</footer>
 </body>
 </html>
