--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; git training ultimate !</p>
+		<p>&copy; git training ultimate ! All right reserved ! </p>
 	</footer>
 </body>
 </html>
