--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Copyright 2014 Git Training
             <div class="form-group">
               <input type="password" placeholder="Password" class="form-control">
             </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
+            <button type="submit" class="btn btn-success">Login</button>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
