--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- J'ai changé davis sur le texte  
 -->
 <head>
-	<title>Updating Title for the Stash Exam</title>
+	<title>Stashing to a different branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
