--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Copyright 2014 Git Training
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>An Example WebSite</title>
+        <title>Title for tagging example</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
